syntax = "proto3";
package poktroll.service;

option go_package = "github.com/pokt-network/poktroll/x/service/types";
option (gogoproto.stable_marshaler_all) = true;

import "gogoproto/gogo.proto";

// EventRelayMiningDifficultyUpdated is an event emitted whenever the relay mining difficulty is updated
// for a given service.
message EventRelayMiningDifficultyUpdated {
    string service_id = 1;
    string prev_target_hash_hex_encoded = 2;
    string new_target_hash_hex_encoded = 3;
    uint64 prev_num_relays_ema = 4;
    uint64 new_num_relays_ema = 5;
}